kubernetes/postgres/base/postgres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres
spec:
  ingressClassName: nginx
  rules:
    - host: ""
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: postgres
                port:
                  number: 5432
            path: /
